<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:checkedButton="@id/unset"
    android:id="@+id/radio_group"
    android:gravity="center">

    <RadioButton
        android:id="@+id/unset"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/unset" />

    <RadioButton
        android:id="@+id/male"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/female" />
</RadioGroup>