<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/personal_info"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/level"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_personal_info" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/t_level"
            app:layout_constraintStart_toEndOf="@id/t_level"
            app:layout_constraintTop_toTopOf="@id/t_level" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/age"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/t_level" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/t_age"
            app:layout_constraintStart_toEndOf="@id/t_age"
            app:layout_constraintTop_toTopOf="@id/t_age" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/t_age" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/t_gender"
            app:layout_constraintStart_toEndOf="@id/t_gender"
            app:layout_constraintTop_toTopOf="@id/t_gender" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/school"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/t_gender" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/t_school"
            app:layout_constraintStart_toEndOf="@id/t_school"
            app:layout_constraintTop_toTopOf="@id/t_school" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/college"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/t_school" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/t_college"
            app:layout_constraintStart_toEndOf="@id/t_college"
            app:layout_constraintTop_toTopOf="@id/t_college" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profile"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/t_college" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_personal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>