<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/edit_username"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="@id/et_edit"
        app:layout_constraintTop_toBottomOf="@id/et_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/confirm"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_len"
        app:layout_constraintTop_toBottomOf="@id/tv_len" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toTopOf="@id/btn_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>